--- a/source/scss/_settings.scss
+++ b/source/scss/_settings.scss
@@ -244,7 +244,7 @@ $dark-blue: #147693;
 // $subheader-bottom-margin: .5rem;
 
 // A general <small> styling
-// $small-font-size: 60%;
+ $small-font-size: 85%;
 // $small-font-color: scale-color($header-font-color, $lightness: 35%);
 
 // We use these to style paragraphs
