--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -173,6 +173,10 @@ ul {
             i { width: rem-calc(20); text-align: center; }
         }
     }
+    li {
+        line-height: 22px;
+        padding: 2px 0 6px;
+    }
 }
 
 blockquote {
@@ -257,6 +261,23 @@ hr {
       color: $orange;
       content: "Editor's Note: ";
   }
+}
+
+.thumbnail {
+  display: block;
+  padding: 4px;
+  line-height: 22px;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 // Hide weird little arrows on dropdown menus
