--- a/source/css/purpleline.css
+++ b/source/css/purpleline.css
@@ -7507,7 +7507,7 @@ hr {
   display: block;
   padding: 4px;
   line-height: 22px;
-  border: 1px solid #ddd;
+  border: 1px solid #DDDDDD;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -7856,6 +7856,7 @@ button,
   color: #333333;
   border-radius: 2px;
   transition: background-color 300ms ease-out;
+  line-height: inherit;
   border-width: 1px;
   border-style: solid;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
@@ -7872,19 +7873,19 @@ button:hover, button:focus,
 .button:focus {
   color: #333333;
 }
-/* line 543, ../scss/purpleline.scss */
+/* line 544, ../scss/purpleline.scss */
 button:focus,
 .button:focus {
   outline: none;
 }
-/* line 544, ../scss/purpleline.scss */
+/* line 545, ../scss/purpleline.scss */
 button:hover, button:active, button:focus,
 .button:hover,
 .button:active,
 .button:focus {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset, 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
 }
-/* line 548, ../scss/purpleline.scss */
+/* line 549, ../scss/purpleline.scss */
 button:hover span, button:active span, button:focus span,
 .button:hover span,
 .button:active span,
@@ -7892,14 +7893,14 @@ button:hover span, button:active span, button:focus span,
   color: #fff;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
 }
-/* line 554, ../scss/purpleline.scss */
+/* line 555, ../scss/purpleline.scss */
 button.success, button.alert, button.info,
 .button.success,
 .button.alert,
 .button.info {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
 }
-/* line 558, ../scss/purpleline.scss */
+/* line 559, ../scss/purpleline.scss */
 button.inverse,
 .button.inverse {
   -webkit-appearance: none;
@@ -7937,17 +7938,17 @@ button.inverse:hover, button.inverse:focus,
 .button.inverse:focus {
   color: #FFFFFF;
 }
-/* line 563, ../scss/purpleline.scss */
+/* line 564, ../scss/purpleline.scss */
 button.warning span,
 .button.warning span {
   color: #333333;
 }
-/* line 564, ../scss/purpleline.scss */
+/* line 565, ../scss/purpleline.scss */
 button.warning:hover span,
 .button.warning:hover span {
   text-shadow: -1px -1px 0px rgba(255, 255, 255, 0.6);
 }
-/* line 566, ../scss/purpleline.scss */
+/* line 567, ../scss/purpleline.scss */
 button.disabled, button.disabled:hover,
 .button.disabled,
 .button.disabled:hover {
@@ -7955,7 +7956,7 @@ button.disabled, button.disabled:hover,
   box-shadow: none;
   border-color: transparent;
 }
-/* line 571, ../scss/purpleline.scss */
+/* line 572, ../scss/purpleline.scss */
 button.disabled span, button.disabled:hover span,
 .button.disabled span,
 .button.disabled:hover span {
@@ -7963,7 +7964,7 @@ button.disabled span, button.disabled:hover span,
   text-shadow: none;
 }
 
-/* line 576, ../scss/purpleline.scss */
+/* line 577, ../scss/purpleline.scss */
 input[type="text"],
 input[type="password"],
 input[type="date"],
@@ -7982,7 +7983,7 @@ textarea {
   border-radius: 2px;
 }
 
-/* line 593, ../scss/purpleline.scss */
+/* line 594, ../scss/purpleline.scss */
 .accordion {
   display: block;
   margin-bottom: 0 !important;
@@ -8004,13 +8005,13 @@ textarea {
 .accordion > a:hover {
   background: #f2f2f2;
 }
-/* line 595, ../scss/purpleline.scss */
+/* line 596, ../scss/purpleline.scss */
 .accordion li {
   border: 1px solid #DDDDDD;
   border-radius: 2px;
   margin-top: 2px;
 }
-/* line 599, ../scss/purpleline.scss */
+/* line 600, ../scss/purpleline.scss */
 .accordion li a:before {
   content: "\f067 \0000a0\0000a0";
   font-size: .7em;
@@ -8021,18 +8022,18 @@ textarea {
   -webkit-font-smoothing: antialiased;
   color: #ca4d1d;
 }
-/* line 609, ../scss/purpleline.scss */
+/* line 610, ../scss/purpleline.scss */
 .accordion li.active a:before {
   content: "\f068 \0000a0\0000a0";
 }
 
-/* line 614, ../scss/purpleline.scss */
+/* line 615, ../scss/purpleline.scss */
 [data-magellan-expedition],
 [data-magellan-expedition-clone] {
   padding: 0;
 }
 
-/* line 617, ../scss/purpleline.scss */
+/* line 618, ../scss/purpleline.scss */
 [data-magellan-expedition] + .row,
 [data-magellan-expedition-clone] + .row {
   margin-top: 50px;
