--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -117,9 +117,23 @@ h1.post-title { font-style: normal; line-height: 1.1;}
   font-size: 60px;
   white-space: nowrap;
   line-height: 1em;
-  &.xl { font-size: rem-calc(90); }
-  &.xxl { font-size: rem-calc(120); }
-  &.bg-white span:before { border-color: #0f9bd1 #fff; }
+  &.xl,
+  &.xxl {
+      font-size: rem-calc(65);
+      margin-top: 5px;
+  }
+
+  // TODO: Adjust this min-width as needed
+  @media all and (min-width: 767px) {
+      &.xl {
+        font-size: rem-calc(90);
+        margin-top: 35px;
+      }
+      &.xxl {
+        font-size: rem-calc(120);
+        margin-top: 35px;
+      }
+  }  &.bg-white span:before { border-color: #0f9bd1 #fff; }
   span {
       background: none repeat scroll 0 0 #0f9bd1;
       border-radius: 3px 0px 3px 3px;
@@ -279,6 +293,15 @@ hr {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
+.polaroid {
+  padding: 4px;
+  background-color: #white;
+  border: 1px solid #gainsboro;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  }
 
 // Hide weird little arrows on dropdown menus
 .f-dropdown:before,
@@ -341,20 +364,6 @@ hr {
 
 // Knight Lab footer
 /* Footer */
-@media (max-width: 767px) {
-    footer { padding: 10px 30px; }
-    #knightlab-logo-column,
-    #knightlab-description {
-        width: 100%;
-        float: none;
-        text-align: center;
-    }
-    #knightlab-description {
-        border-left: 0;
-        text-align: left;
-    }
-    address { display: none; }
-}
 
 footer,
 #footer{
@@ -525,6 +534,28 @@ footer {
   max-width: 840px;
   margin: auto;
   padding-top: 60px;
+    @media (max-width: 767px) {
+        padding-top: 30px;
+    }
+}
+
+@media (max-width: 767px) {
+    footer { padding: 10px 30px; }
+    footer p { font-size: 12px; }
+    #knightlab-logo-column,
+    #knightlab-description {
+        width: 100%;
+        float: none;
+        text-align: center;
+    }
+    #knightlab-logo-column img { max-width: 100px; margin: auto; }
+    #knightlab-description {
+        border-left: 0;
+        text-align: left;
+    }
+    address { display: none; }
+    footer ul.contact-icons { margin: 10px auto; }
+    footer .contact { padding-top: 20px; }
 }
 
 // Blueline overrides components/_sub_nav.scss
