--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -295,8 +295,8 @@ hr {
 }
 .polaroid {
   padding: 4px;
-  background-color: #white;
-  border: 1px solid #gainsboro;
+  background-color: $white;
+  border: 1px solid $gainsboro;
   border: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
