--- a/source/scss/_settings.scss
+++ b/source/scss/_settings.scss
@@ -647,7 +647,7 @@ $dark-blue: #147693;
 // $form-label-font-color: scale-color($black, $lightness: 30%);
 // $form-label-small-transform: capitalize;
 // $form-label-bottom-margin: 0;
-// $input-font-family: inherit;
+ $input-font-family: $font-family-sans-serif;
 // $input-font-color: rgba(0,0,0,0.75);
 // $input-font-size: rem-calc(14);
 // $input-bg-color: $white;
@@ -1337,18 +1337,18 @@ $dark-blue: #147693;
 // $include-html-tabs-classes: $include-html-classes;
 
 // $tabs-navigation-padding: rem-calc(16);
-// $tabs-navigation-bg-color: $silver;
-// $tabs-navigation-active-bg-color: $white;
-// $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
+ $tabs-navigation-bg-color: $white;
+ $tabs-navigation-active-bg-color: $white;
+ $tabs-navigation-hover-bg-color: $smoke;
 // $tabs-navigation-font-color: $jet;
 // $tabs-navigation-active-font-color: $tabs-navigation-font-color;
-// $tabs-navigation-font-size: rem-calc(16);
+ $tabs-navigation-font-size: rem-calc(14);
  $tabs-navigation-font-family: $font-family-sans-serif;
 
 // $tabs-content-margin-bottom: rem-calc(24);
 // $tabs-content-padding: ($column-gutter/2);
 
-// $tabs-vertical-navigation-margin-bottom: 1.25rem;
+ $tabs-vertical-navigation-margin-bottom: 0;
 
 // 32. Thumbnails
 // - - - - - - - - - - - - - - - - - - - - - - - - -
