--- a/source/css/styleguide.css
+++ b/source/css/styleguide.css
@@ -1,48 +1,48 @@
 /*$button-border-width: 3px;*/
 /*$button-border-style: solid;*/
-/* line 2, ../scss/styleguide.scss */
+/* line 3, ../scss/styleguide.scss */
 #change-view dd {
   cursor: pointer;
 }
 
-/* line 3, ../scss/styleguide.scss */
+/* line 5, ../scss/styleguide.scss */
 #style-guide {
   transition: width 0.8s;
   width: auto;
 }
-/* line 6, ../scss/styleguide.scss */
+/* line 8, ../scss/styleguide.scss */
 #style-guide.small-view {
   width: 380px;
 }
-/* line 7, ../scss/styleguide.scss */
+/* line 9, ../scss/styleguide.scss */
 #style-guide.medium-view {
   width: 680px;
 }
-/* line 8, ../scss/styleguide.scss */
+/* line 10, ../scss/styleguide.scss */
 #style-guide.large-view {
   width: 1024px;
 }
-/* line 9, ../scss/styleguide.scss */
+/* line 11, ../scss/styleguide.scss */
 #style-guide.auto-view {
   width: auto;
 }
-/* line 10, ../scss/styleguide.scss */
+/* line 12, ../scss/styleguide.scss */
 #style-guide .panel {
   padding-bottom: 0;
 }
-/* line 11, ../scss/styleguide.scss */
+/* line 13, ../scss/styleguide.scss */
 #style-guide section {
   margin: 3.75rem 0;
   clear: both;
 }
 
-/* line 13, ../scss/styleguide.scss */
+/* line 16, ../scss/styleguide.scss */
 .side-nav {
   background: #EEEEEE;
   padding: 1.875rem;
 }
 
-/* line 15, ../scss/styleguide.scss */
+/* line 18, ../scss/styleguide.scss */
 h6.label {
   display: block;
   margin-left: -20px;
@@ -51,33 +51,33 @@ h6.label {
   background-color: #eae34a;
 }
 
-/* line 23, ../scss/styleguide.scss */
+/* line 26, ../scss/styleguide.scss */
 .panel {
   background-color: #F9F9F9;
   border-color: #EEEEEE;
 }
 
-/* line 24, ../scss/styleguide.scss */
+/* line 27, ../scss/styleguide.scss */
 .panel.white {
   background-color: #FFF;
 }
 
-/* line 25, ../scss/styleguide.scss */
+/* line 28, ../scss/styleguide.scss */
 .panel > h6.label:first-child {
   margin-top: -20px;
 }
 
-/* line 26, ../scss/styleguide.scss */
+/* line 29, ../scss/styleguide.scss */
 .panel pre {
   margin: -21px;
 }
 
-/* line 29, ../scss/styleguide.scss */
+/* line 32, ../scss/styleguide.scss */
 .panel .paint-chip:last-child {
   margin-bottom: 10px;
 }
 
-/* line 31, ../scss/styleguide.scss */
+/* line 34, ../scss/styleguide.scss */
 .paint-chip {
   width: 24.5%;
   height: 160px;
@@ -86,7 +86,7 @@ h6.label {
   margin: 10px 0;
   border: 1px solid #EEEEEE;
 }
-/* line 39, ../scss/styleguide.scss */
+/* line 42, ../scss/styleguide.scss */
 .paint-chip .color-deets {
   padding: 0 5px;
   text-align: right;
@@ -97,11 +97,40 @@ h6.label {
   background: #EEEEEE;
   border-top: 1px solid #DDDDDD;
 }
-/* line 48, ../scss/styleguide.scss */
+/* line 51, ../scss/styleguide.scss */
 .paint-chip .color-deets p {
   margin: 2px 0;
   font-size: 0.75rem;
   font-family: Consolas, "Liberation Mono", Courier, monospace;
+}
+
+/* line 54, ../scss/styleguide.scss */
+.fa-external-link {
+  font-size: 70%;
+  vertical-align: super;
+}
+
+/* line 58, ../scss/styleguide.scss */
+i.fa-link {
+  color: #ce4d28;
+}
+
+/* line 62, ../scss/styleguide.scss */
+label[for="code-snippet"] {
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 10px;
+}
+/* line 66, ../scss/styleguide.scss */
+label[for="code-snippet"] i {
+  font-size: 150%;
+  position: absolute;
+  left: 0;
+  top: 2px;
+  /*font-size: 150%;*/
+  /*color: white;*/
+  /*background-color: $orange;*/
+  /*padding: 5px;*/
 }
 
 /* Tomorrow Night Theme */
@@ -109,13 +138,13 @@ h6.label {
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 /* Tomorrow Comment */
-/* line 58, ../scss/styleguide.scss */
+/* line 84, ../scss/styleguide.scss */
 .hljs-comment {
   color: #969896;
 }
 
 /* Tomorrow Red */
-/* line 63, ../scss/styleguide.scss */
+/* line 89, ../scss/styleguide.scss */
 .hljs-variable,
 .hljs-attribute,
 .hljs-tag,
@@ -132,7 +161,7 @@ h6.label {
 }
 
 /* Tomorrow Orange */
-/* line 79, ../scss/styleguide.scss */
+/* line 105, ../scss/styleguide.scss */
 .hljs-number,
 .hljs-preprocessor,
 .hljs-pragma,
@@ -144,14 +173,14 @@ h6.label {
 }
 
 /* Tomorrow Yellow */
-/* line 90, ../scss/styleguide.scss */
+/* line 116, ../scss/styleguide.scss */
 .ruby .hljs-class .hljs-title,
 .css .hljs-rules .hljs-attribute {
   color: #f0c674;
 }
 
 /* Tomorrow Green */
-/* line 96, ../scss/styleguide.scss */
+/* line 122, ../scss/styleguide.scss */
 .hljs-string,
 .hljs-value,
 .hljs-inheritance,
@@ -162,14 +191,14 @@ h6.label {
 }
 
 /* Tomorrow Aqua */
-/* line 106, ../scss/styleguide.scss */
+/* line 132, ../scss/styleguide.scss */
 .hljs-title,
 .css .hljs-hexcolor {
   color: #8abeb7;
 }
 
 /* Tomorrow Blue */
-/* line 112, ../scss/styleguide.scss */
+/* line 138, ../scss/styleguide.scss */
 .hljs-function,
 .python .hljs-decorator,
 .python .hljs-title,
@@ -182,13 +211,13 @@ h6.label {
 }
 
 /* Tomorrow Purple */
-/* line 124, ../scss/styleguide.scss */
+/* line 150, ../scss/styleguide.scss */
 .hljs-keyword,
 .javascript .hljs-function {
   color: #b294bb;
 }
 
-/* line 129, ../scss/styleguide.scss */
+/* line 155, ../scss/styleguide.scss */
 .hljs {
   display: block;
   overflow-x: auto;
@@ -198,7 +227,7 @@ h6.label {
   -webkit-text-size-adjust: none;
 }
 
-/* line 138, ../scss/styleguide.scss */
+/* line 164, ../scss/styleguide.scss */
 .coffeescript .javascript,
 .javascript .xml,
 .tex .hljs-formula,
